<resources>
    <string name="app_name">My Kamchatka</string>
    <string name="btn_next">Далее</string>
    <string name="btn_previous">Назад</string>
    <string name="txt_onboarding1_title">Необычные экскурсии</string>
    <string name="txt_onboarding1_signature">Откройте для себя самые невероятные места\nКамчатки</string>
    <string name="txt_onboarding2_title">Комфорт</string>
    <string name="txt_onboarding2_signature">Выбирайте удобные для себя условия при\nподборе экскурсий</string>
    <string name="txt_onboarding3_title">Деликатесы</string>
    <string name="txt_onboarding3_signature">Лучшие места для того, чтобы попробовать\nКамчатку на вкус</string>
    <string name="btn_enter_acc">Войти</string>
    <string name="btn_reg_acc">Зарегистрироваться</string>
    <string name="enter_email">Введите электронную почту</string>
    <string name="enter_pass">Введите пароль</string>
    <string name="confirm_pass">Подтвердите пароль</string>
    <string name="conf_inf_confirm">Я согласен с условиями обслуживания и политикой\nконфиденциальности</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_thirdname">Введите отчество (необязательно)</string>
    <string name="enter_birthday">Дата рождения</string>
    <string name="rb_male">Мужской</string>
    <string name="rb_female">Женский</string>
    <string name="make_acc">Создать аккаунт</string>
    <string name="acc_picture">Добавьте фото, чтобы вас узнавали</string>
    <string name="what_need_acc">Что вы ищите?</string>
    <string name="acc_tourism">Туризм</string>
    <string name="acc_company">Туристическая компания</string>
    <string name="company_reg">Регистрация компании</string>
    <string name="company_name">Введите название компании</string>
    <string name="company_category">Выберите услуги, которые вы собираетесь предлагать:</string>
    <string name="category1">Туристические походы</string>
    <string name="category2">Морские экскурсии</string>
    <string name="category3">Аренда авто</string>
    <string name="category4">Гостиницы</string>
    <string name="category5">Джип-туры</string>
    <string name="category6">Трансфер</string>
    <string name="category7">Рыбалка</string>
    <string name="category8">Сплавы по реке</string>
    <string name="newsImageText">newsImage</string>
    <string name="btnReadNews">Читать</string>
    <string name="btnBuy">Buy</string>
    <string name="btnMore">Подробнее</string>
    <string name="tvTitleNews">Новости</string>
    <string name="tvTitleTours">Поиск туров</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchTours">Найти тур своей мечты</string>
    <string name="btnFilters">Фильтры</string>
    <string name="menuLiving">Проживание</string>
    <string name="menuTours">Туры</string>
    <string name="menuNews">Новости</string>
    <string name="menuProfile">Профиль</string>
    <string name="titleLiving">Поиск жилья</string>
    <string name="ivingSearch">Найдите себе уютное место</string>
    <string name="tvProfile">Профиль</string>
    <string name="tourimage">tourImage</string>
    <string name="headerMyTours">Мои туры</string>
    <string name="headerMyHotels">Мои отели</string>
    <string name="headerMyTickets">Мои билеты</string>
    <string name="ibShoppingCart">Корзина</string>
    <string name="search_shopping_cart">Поиск по корзине</string>
    <string name="title_shopping_cart">Корзина</string>
    <string name="header_more_info">Подробнее</string>
    <string name="info">info</string>
    <string name="tvWgatTake">Что взять с собой?</string>
    <string name="tv_about_operator">О Туроператоре</string>
    <string name="btn_booking">Забронировать</string>
    <string name="btn_chat">Чат с Туроператором</string>
    <string name="til_enter_FCs">Введите ФИО</string>
    <string name="til_enter_count">Введите количество человек</string>
    <string name="til_phone_number">Номер телефона для связи</string>
    <string name="tv_tour_card">Тур</string>
    <string name="tv_proce_card">Цена</string>
    <string name="tv_count_card">Количество</string>
    <string name="tv_count_more_card">шт.</string>
    <string name="tv_on_name_card">На имя</string>
    <string name="tv_name_card">Имя</string>
    <string name="tv_total_sum_card">Итого:</string>
    <string name="tv_total_sum_value_card">Цена</string>
    <string name="btn_to_pay">Оплатить</string>
    <string name="btn_done">Готово</string>
    <string name="btn_to_my_booking">Перейти в мои бронирования</string>
    <string name="tv_booking_issued">Бронь успешно оформлена!</string>
    <string name="checkcircle">checkCircle</string>
    <string name="addtour">AddTour</string>
    <string name="tvAddTour">Добавление тура</string>
    <string name="tvEnterTourName">Введите название тура</string>
    <string name="enterTourDate">Выберите дату тура</string>
    <string name="enterTourOperatorName">Введите название туроператора</string>
    <string name="btn_publish">Опубликовать</string>
    <string name="tvavailableSeats">Введите количество свободных мест</string>
    <string name="tvTourDuration">Введите продолжительность тура</string>
    <string name="tvTourPrice">Введите цену тура</string>

</resources>