<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.PersonalData2Activity">

    <TextView
        android:id="@+id/tvTextEnter"
        style="@style/onboarding_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_acc"
        android:layout_marginTop="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <ImageView
        android:id="@+id/im_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextEnter"
        app:srcCompat="@drawable/ic_profile_photo" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/ic_plus_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_personal" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc_picture"
        android:fontFamily="@font/pangolin"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_personal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="29dp"
        android:fontFamily="@font/pangolin"
        android:text="@string/what_need_acc"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="52dp"
        android:layout_marginStart="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rb_tourist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/pangolin"
            android:text="@string/acc_tourism" />

        <RadioButton
            android:id="@+id/rb_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/pangolin"
            android:text="@string/acc_company" />

    </RadioGroup>

    <android.widget.Button
        android:id="@+id/btnNext"
        style="@style/btn_style"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape"
        android:text="@string/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>