<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.PersonalDataActivity">

    <TextView
        android:id="@+id/tvTextEnter"
        style="@style/onboarding_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Создать аккаунт"
        android:layout_marginTop="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_surname"
        style="@style/til_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextEnter"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/error_color"
        app:placeholderTextAppearance="@font/pangolin"
        app:placeholderTextColor="@color/text_input_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pangolin"
            android:hint="@string/enter_surname"
            android:inputType="textPersonName"
            android:textColor="#525252"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_name"
        style="@style/til_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_surname"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/error_color"
        app:placeholderTextAppearance="@font/pangolin"
        app:placeholderTextColor="@color/text_input_color"
        android:hint="@string/enter_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pangolin"
            android:inputType="textPersonName"
            android:textColor="#525252"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_thirdname"
        style="@style/til_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:hint="@string/enter_thirdname"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/error_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_name"
        app:placeholderTextAppearance="@font/pangolin"
        app:placeholderTextColor="@color/text_input_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_thirdname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pangolin"
            android:inputType="textPersonName"
            android:textColor="#525252"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_birthday_date"
        style="@style/til_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="29dp"
        android:layout_marginLeft="29dp"
        android:hint="@string/enter_birthday"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/error_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_thirdname"
        app:placeholderTextAppearance="@font/pangolin"
        app:placeholderTextColor="@color/text_input_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_birthday_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pangolin"
            android:inputType="text|date"
            android:textColor="#525252"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="29dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_birthday_date">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:text="@string/rb_male"
            android:fontFamily="@font/pangolin"/>

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rb_female"
            android:fontFamily="@font/pangolin"/>

    </RadioGroup>


    <android.widget.Button
        android:id="@+id/btnNext"
        style="@style/btn_style"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape"
        android:text="@string/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>